# IFJ

./: .gitignore  CMakeLists.txt  IFJ jazyk  Makefile  README.md  wercker.yml
doc/: symbol_table.txt
inter/: CMakeLists.txt  Makefile  buffer.c  ial.c  ial.h  ifj-base.c  ifj-exec.c  ifj-exec.h  ifj-exp.c  ifj-exp.h  ifj-inter.c  ifj-inter.h  ifj-lexa.c  ifj-lexa.h  ifj-load.c  ifj-sema.c  ifj-sema.h  ifj-syna.c  ifj-syna.h  ifj-tables.h  ifj-test.c  ifj-token.c  ifj-token.h  ifj-util.c  ifj-util.h  ifj_base.c  ifj_exec.c  ifj_exec.h  ifj_exp.c  ifj_exp.h  ifj_inter.c  ifj_inter.h  ifj_lexa.c  ifj_lexa.h  ifj_load.c  ifj_sema.c  ifj_sema.h  ifj_syna.c  ifj_syna.h  ifj_tables.h  (+5 more)
inter/tests/: lexa.c  lexa1.ifj  lexa1.ifj16  syna
inter/utils/: buffer.c  buffer.h  htable.c  htable.h  ifj-tables.h
